# shotwell

./: .gitignore  INSTALL.windows  README.md  buildAndRun-win.sh  buildDistro-win.sh  common-win.sh  copy-dlls.sh  copyBinaries-win.sh  determineDepDlls.sh  glib-2.0.vapi  icon-patterns.txt  meson.build  pkglist.txt  required-dlls.txt  required-packages.txt
data/icons/: meson.build
plugins/: meson.build
plugins/shotwell-transitions/: meson.build
src/: AppDirs.vala  Commands.vala  International.vala  PhotoPage.vala  Printing.vala  Resources.vala  SearchFilter.vala  VideoSupport.vala  main.vala  meson.build  shotwell.rc  shotwell.res  windows.c
src/camera/: ImportPage.vala
src/data_imports/: DataImportsUI.vala
src/dialogs/: Preferences.vala
src/direct/: DirectPhotoPage.vala
src/editing_tools/: EditingTools.vala
src/photos/: JfifSupport.vala
src/plugins/: Plugins.vala
src/sidebar/: Tree.vala
src/util/: system.vala
src/video-support/: Video.vala  VideoReader.vala
thumbnailer/: meson.build  shotwell-video-thumbnailer.vala  windows.c
vala-playground/: compile.sh  hello.vala  i18n.vala  mycmd.cmd  myscript.ps1  mystart.cmd  pipe-test.vala  thumbnailer.vala  windows.c
